--- a/README.pod
+++ b/README.pod
@@ -16,15 +16,15 @@ The source code for after5detroit.com
 
 =head2 CPAN Setup
 
-	cpanm -S Modern::Perl Mojolicious::Lite DBIx::Class::Candy DateTime::Format::SQLite Crypt::SaltedHash Try::Tiny HTML::FormatText
+	cpanm -S Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator DateTime::Format::SQLite DateTime::Format::ISO8601 Crypt::SaltedHash Try::Tiny HTML::FormatText REST::Google::Search
 
 =head1 BUGS
 
-	http://github.com/ispyhumanfly/after5detroit/issues
+	http://github.com/thoughtpivot/after5detroit.com/issues
 
 =head1 SEE ALSO
 
-	http://github.com/ispyhumanfly/after5detroit/wiki
+	http://github.com/thoughtpivot/after5detroit.com/wiki
 
 =head1 LICENSE
 
