--- a/README.pod
+++ b/README.pod
@@ -14,9 +14,11 @@ After5Detroit
 
 The source code for after5detroit.com
 
-=head2 CPAN Setup
+=head2 CPAN Modules
 
-	cpanm -S Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator DateTime::Format::SQLite DateTime::Format::ISO8601 Crypt::SaltedHash Try::Tiny HTML::FormatText REST::Google::Search
+	Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator 
+	DateTime::Format::SQLite DateTime::Format::ISO8601 Crypt::SaltedHash 
+	Try::Tiny HTML::FormatText REST::Google::Search
 
 =head1 BUGS
 
