This code is now called A5.

--- a/README.pod
+++ b/README.pod
@@ -4,7 +4,7 @@
 
 =head1 NAME
 
-After5Detroit
+A5
 
 =head1 SYNOPSIS
 
@@ -12,29 +12,29 @@ After5Detroit
 
 =head1 DESCRIPTION
 
-The source code for after5detroit.com
+The brains behind after5detroit.com
 
 =head2 CPAN Modules
 
 Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator 
 DateTime::Format::SQLite DateTime::Format::ISO8601 Crypt::SaltedHash 
-Try::Tiny HTML::FormatText REST::Google::Search
+Try::Tiny HTML::FormatText REST::Google::Search Task::Plack
 
 =head2 TinyMCE
 
-After5 requires the JavaScript TinyMCE application for its editor.
+A5 requires the JavaScript TinyMCE application for its editor.
 Please download and extract v3.4.9 into public/tinymce.
 
 =head1 BUGS
 
-http://github.com/thoughtpivot/after5detroit.com/issues
+http://github.com/thoughtpivot/a5/issues
 
 =head1 SEE ALSO
 
-http://github.com/thoughtpivot/after5detroit.com/wiki
+http://github.com/thoughtpivot/a5/wiki
 
-=head1 LICENSE
+=head1 COPYRIGHT
 
-This is free software; you can redistribute it and/or modify it under the same terms as Perl itself.
+A5 v2.0 (c) 2011-2012 After5 Detroit, LLC. 777 Woodward Ave. Detroit, MI. 48226
 
 =cut
