--- a/README.pod
+++ b/README.pod
@@ -16,9 +16,9 @@ The code behind after5detroit.com
 
 =head2 CPAN Modules
 
-Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator 
+Modern::Perl Mojolicious::Lite Task::Plack DBIx::Class::Candy SQL::Translator 
 DateTime::Format::SQLite DateTime::Format::ISO8601 Crypt::SaltedHash 
-Try::Tiny HTML::FormatText REST::Google::Search Task::Plack
+Try::Tiny HTML::FormatText REST::Google::Search
 
 =head2 TinyMCE
 
