--- a/README.pod
+++ b/README.pod
@@ -16,7 +16,7 @@ The code behind after5detroit.com
 
 =head2 CPAN Modules
 
-Modern::Perl Mojolicious::Lite Task::Plack DBIx::Class::Candy SQL::Translator 
+Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator 
 DateTime::Format::SQLite DateTime::Format::ISO8601 HTML::FormatText
 REST::Google::Search Net::Google::FederatedLogin
 
