Cleaning up the new trending feature.
See #54, #55, #52

--- a/README.pod
+++ b/README.pod
@@ -24,7 +24,7 @@ The code behind after5detroit.com
 
 Modern::Perl Mojolicious::Lite DBIx::Class::Candy SQL::Translator 
 DateTime::Format::SQLite DateTime::Format::ISO8601 HTML::FormatText
-REST::Google::Search Net::Google::FederatedLogin Mail::Sendmail
+REST::Google::Search Net::Google::FederatedLogin Mail::Sendmail Try::Tiny
 
 =head2 TinyMCE
 
